# imguiwrap

./: .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  docker-build.sh  imguiwrap.cpp  imguiwrap.dear.h  imguiwrap.h  imguiwrap.helpers.h
.github/workflows/: cmake.yml
example/: CMakeLists.txt  basic_example.cpp  dear_example.cpp  dear_example2.cpp  edit_window_example.cpp  hello_world.cpp  main.cpp
src/: .clang-format  .clang-tidy  CMakeLists.txt  imguiwrap.cpp  imguiwrap.dear.h  imguiwrap.defermacro.h  imguiwrap.h  imguiwrap.helpers.h
src/example/: .clang-tidy  CMakeLists.txt  basic_example.cpp  dear_example.cpp  dear_example2.cpp  edit_window_example.cpp  hello_world.cpp
